...
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
    android:id="@+id/group1" >

        <item
            android:id="@+id/browse_events"
            android:title="@string/browse_events" />

        <item
            android:id="@+id/profile_settings"
            android:title="@string/profile_settings" />
        <item
...
