...
        android:id="@+id/group1" >

        <item
            android:id="@+id/current_attendance_menu"
            android:title="@string/current_attendance_menu" />
        <item
            android:id="@+id/announcement_menu"
            android:title="@string/announcements" />
        <item
            android:id="@+id/share_qr_menu"
            android:title="@string/share_qr_code" />
    </group>

...
